# rust_vue_exercise

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  run_minify.py  run_release.py  run_tailwind.py
src/: config.rs  content_type.rs  dep_context.rs  dependency.rs  error.rs  html_base.rs  icon.rs  main.rs  status.rs  utils.rs  validation.rs
src/_asset/: importmap.dev.json  importmap.dev.min.json  importmap.prod.json  importmap.prod.min.json  main.css  main.min.css  root.js  root.min.js
src/_asset/tailwind/: main.css
src/bucket_list/: mod.rs  model.rs  repository.rs  route.rs  validate.rs
src/bucket_list/_asset/: bucket_list.js  bucket_list.min.js  vue.mjs
src/bucket_list/_sql/: add_to_bucket_list.sql  get_all_from_bucket_list.sql
src/bucket_list/validate/: description.rs  mod.rs  name.rs
src/db/: mod.rs
src/db/_sql/: init.sql
src/user/: dependency.rs  flag.rs  form.rs  mod.rs  model.rs  password.rs  repository.rs  route.rs  service.rs  validate.rs
src/user/_sql/: find_by_token.sql  get_user_password.sql  register_user.sql  username_taken.sql
src/user/validate/: password.rs  username.rs
src/utils/: bools.rs  mod.rs
