[package]
name = "rust_vue_exercise"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
error-stack = "0.5.0"
tokio = { version = "1.47.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
maud = { version = "0.27.0", features = ["rocket"] }
figment = { version = "0.10.19", features = ["toml"] }
chrono = "0.4.41"
rusqlite = { version = "0.37.0", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }